# GraphMVP

./: .gitignore  README.md  pyproject.toml
custom/: .gitignore  README.md  custom_dataset.py  custom_dataset_preparation.py
custom/dataset/raw/sample/: sample.h5
custom/dataset/sample/: build_graphmvp_sampledb.ipynb  dataset.h5
custom/dataset/sample/raw/: build_sample_dataset.ipynb
